test/corpus/mother.txt
================================================================================
Mother of all tests
================================================================================


// gen_test_mother1
// tests functions from current impelmentation:
//      generate_functions(prog.function_decl_defs_, o);
//      generate_member_var_decls_all(prog, o);
//      generate_constructor(prog, model_name, o);
//      generate_transform_inits_method(prog.parameter_decl_, o);
/*
 multi line comment
*/
functions {

  int foo(int n) {
    if (n == 0)
      return 1;
    return n * foo(n - 1);
  }

  array[] real sho(real t, array[] real y, array[] real theta,
                   data array[] real x, data array[] int x_int) {
    array[2] real dydt;
    dydt[1] = y[2];
    dydt[2] = -y[1] - theta[1] * y[2];
    return dydt;
  }

  real foo_bar0() {
    return 0.0;
  }

  real foo_bar1(real x) {
    return 1.0;
  }

  real foo_bar2(real x, real y) {
    return 2.0;
  }

  real foo_lpmf(int y, real lambda) {
    return 1.0;
  }

  real foo_lcdf(int y, real lambda) {
    return 1.0;
  }

  real foo_lccdf(int y, real lambda) {
    return 1.0;
  }
  real foo_rng(real mu, real sigma) {
    return normal_rng(mu, sigma);
  }

  void unit_normal_lp(real u) {
    target += normal_lpdf(u | 0, 1);
    u ~ uniform(-100, 100);
  }

  int foo_1(int a) {
    // direct while
    while (1) break;
    while (0) continue;

    // direct for
    for (i in 1 : 10)
      break;
    for (i in 1 : 10)
      continue;

    // in statement seq
    while (1) {
      int b;
      b = 5;
      break;
    }

    // if, else if, else body
    while (1) {
      if (0)
        break;
      else if (1)
        break;
      else
        break;
    }

    // nested while
    while (1) while (0) break;

    // nested for
    while (1) {
      for (i in 1 : 10)
        break;
    }

    // nested foreach (array)
    while (1) {
      array[2, 3] int vs;
      int z;
      for (v in vs) {
        z = 0;
        break;
      }
      for (v in vs) {
        z = 0;
        continue;
      }
      for (v in vs) {
        for (vv in v) {
          z = 0;
          break;
        }
        z = 1;
      }
    }

    // nested foreach (matrix)
    while (1) {
      real z;
      matrix[2, 3] vs;
      for (v in vs) {
        z = 0;
        break;
      }
      for (v in vs) {
        z = 3.1;
        continue;
      }
    }

    // nested foreach (vector)
    while (1) {
      real z;
      vector[2] vs;
      for (v in vs) {
        z = 0;
        break;
      }
      for (v in vs) {
        z = 3.2;
        continue;
      }
    }

    // nested foreach (rowvector)
    while (1) {
      real z;
      row_vector[2] vs;
      for (v in vs) {
        z = 0;
        break;
      }
      for (v in vs) {
        z = 3.3;
        continue;
      }
    }

    // nested block
    while (1) {
      int b;
      b = 5;
      {
        int c;
        c = 6;
        break;
      }
    }

    return 0;
  }

  int foo_2(int a) {
    array[2] int vs;
    int y;
    for (v in vs)
      y = v;
    return 0;
  }

  array[] real foo_3(real t, int n) {
    return rep_array(t, n);
  }

  real foo_lp(real x) {
    return x + target();
  }

  void foo_4(array[] real x) {
    reject("user-specified rejection", x[1], "; ", x);
  }

  real relative_diff(real x, real y, real max_, real min_) {
    real abs_diff;
    real avg_scale;
    abs_diff = abs(x - y);
    avg_scale = (abs(x) + abs(y)) / 2;
    if ((abs_diff / avg_scale) > max_)
      reject("user-specified rejection, difference above ", max_, " x:", x,
             " y:", y);
    if ((abs_diff / avg_scale) < min_)
      reject("user-specified rejection, difference below ", min_, " x:", x,
             " y:", y);
    return abs_diff / avg_scale;
  }

  vector foo_5(vector shared_params, vector job_params,
               data array[] real data_r, data array[] int data_i) {
    return [1, 2, 3]';
  }

  real foo_five_args(real x1, real x2, real x3, real x4, real x5) {
    return x1;
  }
  real foo_five_args_lp(real x1, real x2, real x3, real x4, real x5, real x6) {
    return x1;
  }

  matrix covsqrt2corsqrt(matrix mat, int invert) {
    matrix[rows(mat), cols(mat)] o;
    o = mat;
    o[1] = o[2];
    o[3 : 4] = o[1 : 2];
    return o;
  }
  void f0(int a1, array[] int a2, array[,] int a3, real a4, array[] real a5,
          array[,] real a6, vector a7, array[] vector a8, array[,] vector a9,
          matrix a10, array[] matrix a11, array[,] matrix a12) {
    print("hi");
  }

  int f1(int a1, array[] int a2, array[,] int a3, real a4, array[] real a5,
         array[,] real a6, vector a7, array[] vector a8, array[,] vector a9,
         matrix a10, array[] matrix a11, array[,] matrix a12) {
    return a1;
  }

  array[] int f2(int a1, array[] int a2, array[,] int a3, real a4,
                 array[] real a5, array[,] real a6, vector a7,
                 array[] vector a8, array[,] vector a9, matrix a10,
                 array[] matrix a11, array[,] matrix a12) {
    return a2;
  }

  array[,] int f3(int a1, array[] int a2, array[,] int a3, real a4,
                  array[] real a5, array[,] real a6, vector a7,
                  array[] vector a8, array[,] vector a9, matrix a10,
                  array[] matrix a11, array[,] matrix a12) {
    return a3;
  }

  real f4(int a1, array[] int a2, array[,] int a3, real a4, array[] real a5,
          array[,] real a6, vector a7, array[] vector a8, array[,] vector a9,
          matrix a10, array[] matrix a11, array[,] matrix a12) {
    return a4;
  }

  array[] real f5(int a1, array[] int a2, array[,] int a3, real a4,
                  array[] real a5, array[,] real a6, vector a7,
                  array[] vector a8, array[,] vector a9, matrix a10,
                  array[] matrix a11, array[,] matrix a12) {
    return a5;
  }

  array[,] real f6(int a1, array[] int a2, array[,] int a3, real a4,
                   array[] real a5, array[,] real a6, vector a7,
                   array[] vector a8, array[,] vector a9, matrix a10,
                   array[] matrix a11, array[,] matrix a12) {
    return a6;
  }

  vector f7(int a1, array[] int a2, array[,] int a3, real a4,
            array[] real a5, array[,] real a6, vector a7, array[] vector a8,
            array[,] vector a9, matrix a10, array[] matrix a11,
            array[,] matrix a12) {
    return a7;
  }

  array[] vector f8(int a1, array[] int a2, array[,] int a3, real a4,
                    array[] real a5, array[,] real a6, vector a7,
                    array[] vector a8, array[,] vector a9, matrix a10,
                    array[] matrix a11, array[,] matrix a12) {
    return a8;
  }

  array[,] vector f9(int a1, array[] int a2, array[,] int a3, real a4,
                     array[] real a5, array[,] real a6, vector a7,
                     array[] vector a8, array[,] vector a9, matrix a10,
                     array[] matrix a11, array[,] matrix a12) {
    return a9;
  }

  matrix f10(int a1, array[] int a2, array[,] int a3, real a4,
             array[] real a5, array[,] real a6, vector a7, array[] vector a8,
             array[,] vector a9, matrix a10, array[] matrix a11,
             array[,] matrix a12) {
    return a10;
  }

  array[] matrix f11(int a1, array[] int a2, array[,] int a3, real a4,
                     array[] real a5, array[,] real a6, vector a7,
                     array[] vector a8, array[,] vector a9, matrix a10,
                     array[] matrix a11, array[,] matrix a12) {
    return a11;
  }

  array[,] matrix f12(int a1, array[] int a2, array[,] int a3, real a4,
                      array[] real a5, array[,] real a6, vector a7,
                      array[] vector a8, array[,] vector a9, matrix a10,
                      array[] matrix a11, array[,] matrix a12) {
    return a12;
  }
  void foo_6() {
    int a;
    real b;
    array[20, 30] real c;
    array[60, 70] matrix[40, 50] ar_mat;
    ar_mat[1, 1, 1, 1] = b;
  }
  matrix matfoo() {
    return [[1, 2, 3, 4, 5, 6, 7, 8, 9, 10], [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
            [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]];
  }
  vector vecfoo() {
    return [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]';
  }
  vector vecmufoo(real mu) {
    vector[10] l = mu * vecfoo();
    return l;
  }
  vector vecmubar(real mu) {
    vector[10] l = mu * [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]';
    return l[{1, 2, 3, 4, 5}];
  }
  vector algebra_system(vector x, vector y, array[] real dat,
                        array[] int dat_int) {
    vector[2] f_x;
    f_x[1] = x[1] - y[1];
    f_x[2] = x[2] - y[2];
    return f_x;
  }

  vector binomialf(vector phi, vector theta, data array[] real x_r,
                   data array[] int x_i) {
    vector[1] lpmf;
    lpmf[1] = 0.0;
    return lpmf;
  }
}
data {
  int<lower=0> N;
  int<lower=0> M;
  int<lower=0, upper=N * M> K;
  array[N] int<upper=N> d_int_1d_ar;
  array[N, M, K] int<upper=N> d_int_3d_ar;
  real<lower=-2.0, upper=2.0> J;
  array[N] real d_real_1d_ar;
  array[N, M, K] real d_real_3d_ar;
  vector[N] d_vec;
  array[N] vector[N] d_1d_vec;
  array[N, M, K] vector[N] d_3d_vec;
  row_vector[N] d_row_vec;
  array[N] row_vector[N] d_1d_row_vec;
  array[N, M, K] row_vector[N] d_3d_row_vec;
  array[4, 5] matrix<lower=0, upper=1>[2, 3] d_ar_mat;
  simplex[N] d_simplex;
  array[N] simplex[N] d_1d_simplex;
  array[N, M, K] simplex[N] d_3d_simplex;
  cholesky_factor_cov[5, 4] d_cfcov_54;
  cholesky_factor_cov[3] d_cfcov_33;
  array[K] cholesky_factor_cov[3] d_cfcov_33_ar;
  int d_int;
  array[d_int] int d_int_array;
  array[d_int, 2] int d_int_array_2d;
  array[d_int, 2, 3] int d_int_array_3d;
  real d_real;
  array[d_int] real d_real_array;
  array[d_int, 2] real d_real_array_2d;
  array[d_int, 2, 3] real d_real_array_3d;
  matrix[d_int, d_int] d_matrix;
  array[d_int] matrix[d_int, d_int] d_matrix_array;
  array[d_int, 2] matrix[d_int, d_int] d_matrix_array_2d;
  array[d_int, 2, 3] matrix[d_int, d_int] d_matrix_array_3d;
  vector[d_int] d_vector;
  array[d_int] vector[d_int] d_vector_array;
  array[d_int, 2] vector[d_int] d_vector_array_2d;
  array[d_int, 2, 3] vector[d_int] d_vector_array_3d;
  row_vector[d_int] d_row_vector;
  array[d_int] row_vector[d_int] d_row_vector_array;
  array[d_int, 2] row_vector[d_int] d_row_vector_array_2d;
  array[d_int, 2, 3] row_vector[d_int] d_row_vector_array_3d;
}
transformed data {
  int td_int;
  array[N] int td_1d;
  array[M] int td_1dk = rep_array(1, M);
  int td_a = N;
  real td_b = N * J;
  real td_c = foo_bar1(td_b);
  array[4, 5] matrix<lower=0, upper=1>[2, 3] td_ar_mat;
  simplex[N] td_simplex;
  array[N] simplex[N] td_1d_simplex;
  array[N, M, K] simplex[N] td_3d_simplex;
  cholesky_factor_cov[5, 5] td_cfcov_54; // TODO: Change to 5,4
  cholesky_factor_cov[3] td_cfcov_33;
  vector[2] x;
  vector[2] y;
  array[0] real dat;
  array[0] int dat_int;
  array[0, 0] real x_r;
  array[0, 0] int x_i;
  td_int = 1 || 2;
  td_int = 1 && 2;
  for (i in 1 : 2) {
    for (j in 1 : 3) {
      for (m in 1 : 4) {
        for (n in 1 : 5) {
          td_ar_mat[m, n, i, j] = 0.4;
        }
      }
    }
  }
  for (i in 1 : N) {
    td_simplex[i] = 1.0 / N;
    for (n in 1 : N) {
      td_1d_simplex[n, i] = 1.0 / N;
      for (m in 1 : M) {
        for (k in 1 : K) {
          td_3d_simplex[n, m, k, i] = 1.0 / N;
        }
      }
    }
  }
  for (i in 1 : 4) {
    for (j in 1 : 5) {
      matrix[2, 3] l_mat = d_ar_mat[i, j];
      print("ar dim1: ", i, " ar dim2: ", j, " matrix: ", l_mat);
    }
  }
  td_cfcov_54 = diag_matrix(rep_vector(1, rows(td_cfcov_54)));
  td_cfcov_33 = diag_matrix(rep_vector(1, rows(td_cfcov_33)));
  {
    real z;
    row_vector[2] blocked_tdata_vs;
    for (v in blocked_tdata_vs) {
      z = 0;
    }
    array[4] int indices = {1, 2, 3, 4};
    for (i in indices[1 : 3]) {
      z = i;
    }
  }
  // some indexing tests for multi indices and slices
  td_1dk = td_1d[td_1dk];
  td_simplex = td_1d_simplex[1,  : ];
  td_simplex = td_1d_simplex[1,  : ];
  td_simplex = td_1d_simplex[1, 1 : N];

  array[2, 2] int arr_mul_ind;
  arr_mul_ind[1, 1 : 2] = {1, 1};

  array[2] real x_mul_ind = {1, 2};

  real transformed_data_real;
  array[d_int] real transformed_data_real_array;
  array[d_int, 2] real transformed_data_real_array_2d;
  array[d_int, 2, 3] real transformed_data_real_array_3d;
  matrix[d_int, d_int] transformed_data_matrix;
  array[d_int] matrix[d_int, d_int] transformed_data_matrix_array;
  array[d_int, 2] matrix[d_int, d_int] transformed_data_matrix_array_2d;
  array[d_int, 2, 3] matrix[d_int, d_int] transformed_data_matrix_array_3d;
  vector[d_int] transformed_data_vector;
  array[d_int] vector[d_int] transformed_data_vector_array;
  array[d_int, 2] vector[d_int] transformed_data_vector_array_2d;
  array[d_int, 2, 3] vector[d_int] transformed_data_vector_array_3d;
  row_vector[d_int] transformed_data_row_vector;
  array[d_int] row_vector[d_int] transformed_data_row_vector_array;
  array[d_int, 2] row_vector[d_int] transformed_data_row_vector_array_2d;
  array[d_int, 2, 3] row_vector[d_int] transformed_data_row_vector_array_3d;

  transformed_data_real = d_int .^ d_int;
  transformed_data_real = d_real .^ d_int;
  transformed_data_real = d_int .^ d_real;
  transformed_data_real = d_real .^ d_real;
  transformed_data_real_array = d_int_array .^ d_int;
  transformed_data_real_array = d_int_array .^ d_real;
  transformed_data_real_array_2d = d_int_array_2d .^ d_int;
  transformed_data_real_array_2d = d_int_array_2d .^ d_real;
  transformed_data_real_array_3d = d_int_array_3d .^ d_int;
  transformed_data_real_array_3d = d_int_array_3d .^ d_real;
  transformed_data_real_array = d_int .^ d_int_array;
  transformed_data_real_array = d_real .^ d_int_array;
  transformed_data_real_array_2d = d_int .^ d_int_array_2d;
  transformed_data_real_array_2d = d_real .^ d_int_array_2d;
  transformed_data_real_array_3d = d_int .^ d_int_array_3d;
  transformed_data_real_array_3d = d_real .^ d_int_array_3d;

  transformed_data_real_array = d_int .^ d_real_array;
  transformed_data_real_array = d_real .^ d_real_array;
  transformed_data_real_array_2d = d_int .^ d_real_array_2d;
  transformed_data_real_array_2d = d_real .^ d_real_array_2d;
  transformed_data_real_array_3d = d_int .^ d_real_array_3d;
  transformed_data_real_array_3d = d_real .^ d_real_array_3d;

  transformed_data_real_array = d_real_array .^ d_int;
  transformed_data_real_array = d_real_array .^ d_real;
  transformed_data_real_array_2d = d_real_array_2d .^ d_int;
  transformed_data_real_array_2d = d_real_array_2d .^ d_real;
  transformed_data_real_array_3d = d_real_array_3d .^ d_int;
  transformed_data_real_array_3d = d_real_array_3d .^ d_real;

  transformed_data_real_array = d_int_array .^ d_int_array;
  transformed_data_real_array = d_real_array .^ d_real_array;
  transformed_data_real_array_2d = d_int_array_2d .^ d_int_array_2d;
  transformed_data_real_array_2d = d_real_array_2d .^ d_real_array_2d;
  transformed_data_real_array_3d = d_int_array_3d .^ d_int_array_3d;
  transformed_data_real_array_3d = d_real_array_3d .^ d_real_array_3d;

  transformed_data_vector = d_vector .^ d_int;
  transformed_data_vector = d_vector .^ d_real;
  transformed_data_vector = fma(d_vector, d_vector, d_vector);
  transformed_data_vector = fma(d_vector, d_vector, d_real);
  transformed_data_vector = fma(d_real, d_vector, d_real);
  transformed_data_vector_array = d_vector_array .^ d_int;
  transformed_data_vector_array = d_vector_array .^ d_real;
  transformed_data_vector_array_2d = d_vector_array_2d .^ d_int;
  transformed_data_vector_array_2d = d_vector_array_2d .^ d_real;
  transformed_data_vector_array_3d = d_vector_array_3d .^ d_int;
  transformed_data_vector_array_3d = d_vector_array_3d .^ d_real;

  transformed_data_vector = d_int .^ d_vector;
  transformed_data_vector = d_real .^ d_vector;
  transformed_data_vector_array = d_int .^ d_vector_array;
  transformed_data_vector_array = d_real .^ d_vector_array;
  transformed_data_vector_array_2d = d_int .^ d_vector_array_2d;
  transformed_data_vector_array_2d = d_real .^ d_vector_array_2d;
  transformed_data_vector_array_3d = d_int .^ d_vector_array_3d;
  transformed_data_vector_array_3d = d_real .^ d_vector_array_3d;

  transformed_data_vector = d_vector .^ d_vector;
  transformed_data_vector = fma(d_vector, d_vector, d_vector);
  transformed_data_vector = fma(d_vector, d_vector, d_real);
  transformed_data_vector_array = d_vector_array .^ d_vector_array;
  transformed_data_vector_array_2d = d_vector_array_2d .^ d_vector_array_2d;
  transformed_data_vector_array_3d = d_vector_array_3d .^ d_vector_array_3d;

  transformed_data_row_vector = d_row_vector .^ d_int;
  transformed_data_row_vector = d_row_vector .^ d_real;
  transformed_data_row_vector_array = d_row_vector_array .^ d_int;
  transformed_data_row_vector_array = d_row_vector_array .^ d_real;
  transformed_data_row_vector_array_2d = d_row_vector_array_2d .^ d_int;
  transformed_data_row_vector_array_2d = d_row_vector_array_2d .^ d_real;
  transformed_data_row_vector_array_3d = d_row_vector_array_3d .^ d_int;
  transformed_data_row_vector_array_3d = d_row_vector_array_3d .^ d_real;

  transformed_data_row_vector = d_int .^ d_row_vector;
  transformed_data_row_vector = d_real .^ d_row_vector;
  transformed_data_row_vector_array = d_int .^ d_row_vector_array;
  transformed_data_row_vector_array = d_real .^ d_row_vector_array;
  transformed_data_row_vector_array_2d = d_int .^ d_row_vector_array_2d;
  transformed_data_row_vector_array_2d = d_real .^ d_row_vector_array_2d;
  transformed_data_row_vector_array_3d = d_int .^ d_row_vector_array_3d;
  transformed_data_row_vector_array_3d = d_real .^ d_row_vector_array_3d;

  transformed_data_row_vector = d_row_vector .^ d_row_vector;
  transformed_data_row_vector_array = d_row_vector_array
                                      .^ d_row_vector_array;
  transformed_data_row_vector_array_2d = d_row_vector_array_2d
                                         .^ d_row_vector_array_2d;
  transformed_data_row_vector_array_3d = d_row_vector_array_3d
                                         .^ d_row_vector_array_3d;
